fix: color contrast check

--- a/src/components/education/Education.scss
+++ b/src/components/education/Education.scss
@@ -16,7 +16,7 @@
         .content__item {
             display: flex;
             width: 50%;
-            margin-bottom: 50px;
+            margin-bottom: 60px;
             padding-left: 30px;
             align-items: flex-start;
 
@@ -86,6 +86,7 @@
                 }
             }
             &-prof {
+                margin: 0;
                 font-size: 18px;
                 color: #c36ec3;
 
@@ -94,6 +95,7 @@
                 }
                 @media screen and (max-width: 695px) {
                     line-height: 16px;
+                    margin-top: 5px;
                 }
             }
             &-link {
@@ -110,7 +112,7 @@
                 }
 
                 &:hover {
-                    color: $purple-color;
+                    color: #bf51a1;
                 }
             }
         }
