--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -128,8 +128,7 @@
                 transition: all 0.5s linear;
                 overflow: hidden;
                 &:hover {
-                    color: #a11c7e;
-                    // border-bottom: 3px solid #a11c7e;
+                    color: $light-purple-color;
                 }
 
                 @media screen and (max-width: 840px) {
@@ -141,6 +140,7 @@
             padding: 10px 20px;
             margin: 0 20px;
             border-radius: 100px;
+            border: none;
             background-image: $gradient;
             font-size: 16px;
             color: #fff;
