--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -143,7 +143,7 @@
             }
             .social-link {
                 text-decoration: none;
-                color: $blue-bright-color;
+                color: #546ca4;
                 font-size: 25px;
                 transition: $transition;
                 @media screen and (max-width: 330px) {
