--- a/src/components/summary/Summary.scss
+++ b/src/components/summary/Summary.scss
@@ -20,7 +20,7 @@
 
     &__text {
         width: 100%;
-        font-size: 19px;
+        font-size: 20px;
         line-height: 30px;
         text-align: justify;
 
