--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,7 +25,6 @@ section {
 h2 {
     margin: 0 auto 60px;
     font-size: 35px;
-    border-bottom: 2px solid $purple-color;
     width: fit-content;
     color: #fff;
 
